--- a/Midterm.html
+++ b/Midterm.html
@@ -29,12 +29,50 @@
 			<h2>Our Services</h2>
 			<p>We offer a range of auto body repair services including:</p>
 			<ul>
-				<li>Dent and Scratch Repair</li>
-				<li>Painting and Refinishing</li>
-				<li>Frame Straightening</li>
-				<li>Windshield and Glass Replacement</li>
-				<li>Detailing and Cleaning</li>
+				<div class="slider">
+				<li>	
+					<div class="slide">
+						<h3>Dent and Scratch Repair</h3>
+						<p>Description 1</p>
+					<img src="images/dent-repair1-768x512.jpg" alt="Slide 1">
+				  </div>
+				</li>
+				<li>	
+					<div class="slide">
+						<h3>Painting and Refinishing</h3>
+						<p>Description 2</p>	
+					<img src="images/Painting and Refinishing.jpg" alt="Slide 2">
+				  </div>
+				</li>
+				<li>
+					<div class="slide">
+						<h3>Frame Straightening</h3>
+						<p>Description 3</p>
+						<img src="images/Frame Straightening.jpg" alt="Slide 3">
+					  </div>
+				</li>
+				<li>
+					<div class="slide">
+						<h3>Windshield and Glass Replacement</h3>
+						<p>Description 4</p>
+						<img src="images/Windshield and Glass Replacement.jpg" alt="Slide 4">
+					  </div>
+				</li>
+				<li>
+					<div class="slide">
+						<h3>Detailing and Cleaning</h3>
+						<p>Description 5</p>
+						<img src="images/Detailing and Cleaning.jpg" alt="Slide 5">
+					  </div>
+				</li>
 			</ul>
+
+
+
+
+	<!-- Add more slides as needed -->
+  	</div>
+  
 		</section>
 
 		<section id="about">
