--- a/Midterm.html
+++ b/Midterm.html
@@ -3,6 +3,9 @@
 <head>
 	<title>Auto Body Repair Shop</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<style>
+
+	</style>
 </head>
 <body>
 	<header>
@@ -28,49 +31,39 @@
 		<section id="services">
 			<h2>Our Services</h2>
 			<p>We offer a range of auto body repair services including:</p>
-			<ul>
 				<div class="slider">
-				<li>	
 					<div class="slide">
 						<h3>Dent and Scratch Repair</h3>
 						<p>Description 1</p>
-					<img src="images/dent-repair1-768x512.jpg" alt="Slide 1">
-				  </div>
-				</li>
-				<li>	
+						<img src="images/dent-repair1-768x512.jpg" alt="1">
+					</div>
+
 					<div class="slide">
 						<h3>Painting and Refinishing</h3>
 						<p>Description 2</p>	
-					<img src="images/Painting and Refinishing.jpg" alt="Slide 2">
-				  </div>
-				</li>
-				<li>
+						<img src="images/Painting and Refinishing.jpg" alt="2">
+				 	</div>
+
 					<div class="slide">
 						<h3>Frame Straightening</h3>
 						<p>Description 3</p>
-						<img src="images/Frame Straightening.jpg" alt="Slide 3">
-					  </div>
-				</li>
-				<li>
+						<img src="images/Frame Straightening.jpg" alt="3">
+					</div>
+
 					<div class="slide">
 						<h3>Windshield and Glass Replacement</h3>
 						<p>Description 4</p>
-						<img src="images/Windshield and Glass Replacement.jpg" alt="Slide 4">
-					  </div>
-				</li>
-				<li>
+						<img src="images/Windshield and Glass Replacement.jpg" alt="4">
+					</div>
+
 					<div class="slide">
 						<h3>Detailing and Cleaning</h3>
 						<p>Description 5</p>
-						<img src="images/Detailing and Cleaning.jpg" alt="Slide 5">
-					  </div>
-				</li>
-			</ul>
+						<img src="images/Detailing and Cleaning.jpg" alt="5">
+					</div>
 
-
-
-
-	<!-- Add more slides as needed -->
+					<button id="prev">Previous</button>
+					<button id="next">Next</button>
   	</div>
   
 		</section>
