--- a/Midterm.html
+++ b/Midterm.html
@@ -3,14 +3,11 @@
 <head>
 	<title>Auto Body Repair Shop</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<style>
-
-	</style>
+	<script src="script.js"></script>
 </head>
 <body>
 	<header>
 		<h1>Auto Body Repair Shop</h1>
-		<h2>Get Your Car Looking Like New</h2>
 		<nav>
 			<ul>
                 <li><a href="#home">Home</a></li>
@@ -19,6 +16,7 @@
 				<li><a href="#contact">Contact Us</a></li>
 			</ul>
 		</nav>
+		<div class="hours">Hours of Operation: Monday-Friday 9:00 AM - 6:00 PM</div>
 	</header>
 
 	<main>
@@ -63,15 +61,13 @@
 					</div>
 
 					<button id="prev">Previous</button>
-					<button id="next">Next</button>
-  	</div>
-  
+					<button id="next">Next</button>  
 		</section>
 
 		<section id="about">
 			<h2>About Us</h2>
 			<p>We are a team of experienced auto body repair specialists who are dedicated to providing high-quality workmanship and excellent customer service. We use the latest tools and techniques to get your car looking like new.</p>
-			<img src="repair-shop.jpg" alt="Auto Body Repair Shop">
+			<img src="images/ebQ43vMGtPyAVNhrV7Y2--1--7ifbl.jpg" alt="6">
 		</section>
 
 		<section id="contact">
